2003-11-04 Colin McCormack <colin@field.medicine.adelaide.edu.au>
       * preparing Debian package for tclhttpd
       * fixed innocuous bug causing noise on loading libtml under
       Debian package
	
2003-10-28 Colin McCormack <colin@field.medicine.adelaide.edu.au>
       * Fixed sf.net bug [804488] Redirect_To does not work in .tml
        Added suggested patch to template.tcl
       * Added Http_AddHeaders and Http_RemoveHeaders, and
       modified HttpRespondHeader so users can add http headers
       * Added Http_Refresh and Http_NoCache convenience procs
       * Fixed sf.net bug 607590 error counter named "errors" or "error"?
       picked errors - it's less easily confused with error command
       * Fixed sf.net bug 723419 Doc_Error errors
       as suggested by davygrvy
       * Fixed sf.net bug 761322 Upload module is dangerous
       Added -unique flag to upload module to resolve problem
	
2003-10-16 Colin McCormack <colin@field.medicine.adelaide.edu.au>
        * lib/{auth,passcheck,tclcrypt}.tcl: added pure tcl crypt
        as a fallback for installations lacking the compiled version
        * htdocs/htaccess/: added tools for maintenance of .htaccess
        authentication files, group and passwords.

2003-10-10  Brent Welch <welch@panasas.com>
        * lib/httpd.tcl: fixes for logging of static files based on
        changes suggestedby David Zolli.
        * lib/logstd.tcl: introduced Log(cookie) to control if the
        cookie value is appended to the log.

2003-9-27  Colin McCormack <colin@field.medicine.adelaide.edu.au>
        * lib/httpd.tcl: HTML armour default error output
        * htdocs/admin htdocs/debug htdocs/status:
        added access control .htaccess to direct domains
        to remove some vulnerabilities

2003-9-24  Brent Welch <welch@panasas.com>
        * lib/dirlist.tcl: Security fix to prevent you from listing
        the contents of directories you are not supposed to. It is