@@ -2,21 +2,23 @@
 #
 # Create a super distribution of TclHttpd, Tcl, Tcllib, and Thread
 
-HTTPD_VERSION=3.4.3
-HTTPD_TAG=tclhttpd-3-4-rel-3
-WIN_VERSION=343
+HTTPD_VERSION=3.5.0
+HTTPD_TAG=tclhttpd-3-5-rel-0
+HTTPD_TAG=HEAD
+WIN_VERSION=350
 DISTDIR=/usr10/home/welch/dist
 SUPER_DIR=${DISTDIR}/tclhttpd${HTTPD_VERSION}-dist
 
-TCL_VERSION=8.3.4
-TCL_DIST=${DISTDIR}/tcl${TCL_VERSION}.tar.gz
+TCL_VERSION=8.4.5
+TCL_DIST=${DISTDIR}/tcl${TCL_VERSION}-src.tar.gz
 
-TCLLIB_VERSION=1.3
+TCLLIB_VERSION=1.4
 TCLLIB_DIST=${DISTDIR}/tcllib-${TCLLIB_VERSION}.tar.gz
 
-THREAD_VERSION=2.4
-THREAD_WIN_VERSION=24
-THREAD_TAG=thread-2-4
+THREAD_VERSION=2.6
+THREAD_WIN_VERSION=26
+THREAD_TAG=thread-2-6
+THREAD_TAG=HEAD
 
 SCRATCH=/usr10/home/welch/scratch
 mkdir ${SCRATCH}
