@@ -4,12 +4,12 @@
 
 # These are the packages
 
-TCL_VERSION=8.3.4
+TCL_VERSION=8.4.5
 TCL = tcl$(TCL_VERSION)
 TK = tk$(TCL_VERSION)
-THREAD = thread2.4
-TCLLIB = tcllib-1.3
-HTTPD = tclhttpd3.4.3
+THREAD = thread2.5
+TCLLIB = tcllib-1.4
+HTTPD = tclhttpd3.5.0
 
 # Edit MODULES if you don't want to build something.
 
