@@ -24,17 +24,17 @@ AC_SUBST(CONFIGDIR)
 PACKAGE=tclhttpd
 
 MAJOR_VERSION=3
-MINOR_VERSION=4
-PATCHLEVEL=".3"
+MINOR_VERSION=5
+PATCHLEVEL=".0"
 RELEASE=`grep Release: ${srcdir}/${PACKAGE}.spec | sed -e 's/Release: *//'`
 
 VERSION=${MAJOR_VERSION}.${MINOR_VERSION}${PATCHLEVEL}
 NODOT_VERSION=${MAJOR_VERSION}${MINOR_VERSION}
 WIN_VERSION=`echo ${VERSION} | sed -e 's/\.//g'`
 
-TCL_VERSION=8.3.4
-TCLLIB_VERSION=1.3
-THREAD_VERSION=2.4
+TCL_VERSION=8.4.5
+TCLLIB_VERSION=1.4
+THREAD_VERSION=2.6
 
 # We build two minor packages for the crypt and limit C extensions
 
